--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_sficon: ^1.2.1
   is_first_run: ^1.0.0
   shared_preferences: ^2.5.3
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
