--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   flutter_sficon: ^1.2.1
   is_first_run: ^1.0.0
   shared_preferences: ^2.5.3
-  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -31,23 +30,23 @@ flutter:
     - assets/images/
 
   fonts:
-    - family: SFProDisplay
+    - family: Inter
       fonts:
-        - asset: assets/fonts/SF-Pro-Display-Thin.otf
+        - asset: assets/fonts/Inter-Thin.otf
           weight: 100
-        - asset: assets/fonts/SF-Pro-Display-Ultralight.otf
+        - asset: assets/fonts/Inter-ExtraLight.otf
           weight: 200
-        - asset: assets/fonts/SF-Pro-Display-Light.otf
+        - asset: assets/fonts/Inter-Light.otf
           weight: 300
-        - asset: assets/fonts/SF-Pro-Display-Regular.otf
+        - asset: assets/fonts/Inter-Regular.otf
           weight: 400
-        - asset: assets/fonts/SF-Pro-Display-Medium.otf
+        - asset: assets/fonts/Inter-Medium.otf
           weight: 500
-        - asset: assets/fonts/SF-Pro-Display-Semibold.otf
+        - asset: assets/fonts/Inter-SemiBold.otf
           weight: 600
-        - asset: assets/fonts/SF-Pro-Display-Bold.otf
+        - asset: assets/fonts/Inter-Bold.otf
           weight: 700
-        - asset: assets/fonts/SF-Pro-Display-Heavy.otf
+        - asset: assets/fonts/Inter-ExtraBold.otf
           weight: 800
-        - asset: assets/fonts/SF-Pro-Display-Black.otf
+        - asset: assets/fonts/Inter-Black.otf
           weight: 900
