--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   is_first_run: ^1.0.0
   shared_preferences: ^2.5.3
   openfoodfacts: ^3.27.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
