--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,16 @@ dependencies:
   shared_preferences: ^2.5.3
   openfoodfacts: ^3.27.0
   permission_handler: ^12.0.1
+  hive_ce: ^2.15.1
+  hive_ce_flutter: ^2.3.3
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  hive_ce_generator: ^1.8.1
+  build_runner: ^2.10.4
 
 flutter:
   uses-material-design: true
