--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   hive_ce: ^2.15.1
   hive_ce_flutter: ^2.3.3
   freezed_annotation: ^3.1.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
