--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   hive_ce_flutter: ^2.3.3
   freezed_annotation: ^3.1.0
   path_provider: ^2.1.5
+  dio: ^5.9.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
