--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=2.12.0"
 
 dependencies:
   flutter:
@@ -23,15 +23,20 @@ dependencies:
   path_provider: ^2.1.5
   dio: ^5.9.0
   http: ^1.6.0
+  riverpod_annotation: ^3.0.3
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  custom_lint: ^0.8.0
   hive_ce_generator: ^1.8.1
-  build_runner: ^2.10.4
+  build_runner: ^2.7.1
   freezed: ^3.2.3
   freezed_lint: ^0.0.12
+  riverpod_generator: ^3.0.3
+  riverpod_lint: ^3.0.3
 
 flutter:
   uses-material-design: true
